gcc/testsuite/gcc.dg/sizeof-1.c
/* PR c/27718 */
/* { dg-do compile } */

int i = sizeof(struct A[]);  /* { dg-error "incomplete" } */
